--- a/man/paru.8
+++ b/man/paru.8
@@ -303,6 +303,17 @@ Set an alternative AUR URL.
 Set an alternative URL for the AUR /rpc endpoint.
 
 .TP
+.B \-\-proxy <url>
+Override proxy for paru's HTTP requests to the AUR. Supports http://,
+https://, and socks5:// schemes. Paru respects standard proxy environment
+variables by default; this option overrides them. Does not affect git or pacman.
+
+.TP
+.B \-\-noproxy <hosts>
+Comma-separated list of hosts to bypass the proxy. Only applies when --proxy
+is set.
+
+.TP
 .B \-\-clonedir <dir>
 Directory used to download and run PKGBUILDs.
 
