--- a/po/sv.po
+++ b/po/sv.po
@@ -2,21 +2,21 @@
 # Copyright (C) YEAR THE paru'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the paru package.
 # filiphe <filip@hesslund.org>, 2021.
-# Luna Jernberg <droidbittin@gmail.com>, 2022, 2023, 2024.
+# Luna Jernberg <droidbittin@gmail.com>, 2022, 2023, 2024, 2026.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2025-07-08 05:28+0000\n"
-"PO-Revision-Date: 2024-01-15 10:22+0000\n"
+"PO-Revision-Date: 2026-01-07 01:04+0000\n"
 "Last-Translator: Luna Jernberg <droidbittin@gmail.com>\n"
 "Language-Team: \n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.4.1\n"
+"X-Generator: Poedit 3.8\n"
 
 #: src/clean.rs:36
 msgid "Do you want to clean ALL AUR packages from cache?"
@@ -979,7 +979,7 @@ msgstr "Acceptera ändringar?"
 
 #: src/install.rs:1750
 msgid "Paging with less. Press 'q' to quit or 'h' for help."
-msgstr ""
+msgstr "Sökning med less. Tryck på 'q' för att avsluta eller 'h' för hjälp."
 
 #: src/install.rs:1788
 msgid " nothing new to review"
