--- a/po/hu.po
+++ b/po/hu.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2026-01-08 17:40+0000\n"
 "PO-Revision-Date: 2026-01-08 20:01+0100\n"
-"Last-Translator: summoner <summoner@vivaldi.net>\n"
+"Last-Translator: summoner <summoner@disroot.org>\n"
 "Language-Team: \n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
